--- a/src/components/App.module.css
+++ b/src/components/App.module.css
@@ -1,10 +1,28 @@
+.nav{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: center; */
+    padding: 15px;
+    width: 768px;
+    margin: 0 auto;
+}
 
+.buttons{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
 
 .main{
     /* background-color: aquamarine; */
+    width: 768px;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 15px;
 }
+
