--- a/src/components/ContactList/Contactlist.module.css
+++ b/src/components/ContactList/Contactlist.module.css
@@ -1,3 +1,7 @@
+.list{
+    width:80%;
+}
+
 .listItem{
     list-style: none;
     /* width:50%; */
@@ -5,6 +9,9 @@
     border:1px solid #333333;
     padding: 10px;
     margin: 10px;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
 }
 
 .userName{
